@@ -1,4 +1,7 @@
 
+2009-05-11 22:02 Ali aliov@xfce.org 
+	 * : Added xfpm-debug.c with some code to debug GEnum values
+
 2009-05-11  9:31 Ali aliov@xfce.org 
 	 * : Update po Changelog for the russian translation
 
